[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ajprax"
version = "0.0.1"
authors = [{ name="Aaron Feldstein", email="ajprax@gmail.com" }]
description = "A collection of generic utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ajprax/ajprax"
Issues = "https://github.com/ajprax/ajprax/issues"